Fixed omniscenes to reproduce paper results

--- a/configs/omniscenes.ini
+++ b/configs/omniscenes.ini
@@ -1,7 +1,7 @@
 [Default]
 dataset = OmniScenes
 sample_rate = 1
-sharpen_color = True
+match_color = True
 num_bins = 256
 out_of_room_quantile = 0.05
 area = None
